src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html, body {
  @apply overscroll-none; 
}

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
}

@media (prefers-reduced-motion: reduce) {
  .animate-blob {
    animation: none;
  }
}

body {
  color: rgb(var(--foreground-rgb));
  background: 
    rgb(var(--background-start-rgb));
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

.safe-area {
  padding-top: env(safe-area-inset-top);
  padding-right: env(safe-area-inset-right);
  padding-bottom: env(safe-area-inset-bottom);
  padding-left: env(safe-area-inset-left);
}

.h-fill-available {
  height: -webkit-fill-available;
  height: fill-available;
}

.dynamic-island-fill {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  height: env(safe-area-inset-top);
  z-index: 1000;
}

@media (prefers-color-scheme: dark) {
  .dynamic-island-fill {
    background: linear-gradient(to right, #1f2937, #374151); 
  }
}

@media (prefers-color-scheme: light) {
  .dynamic-island-fill {
    background: linear-gradient(to right, #f3f4f6, #9ca3af);
  }
}

